Update and rename Homework11_2017314461_Muhammad.ipynb to NLP_Scratch.ipynb

--- a/Pytorch Practice/NLP_Scratch.ipynb
+++ b/Pytorch Practice/NLP_Scratch.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Homework11-2017314461-Muhammad.ipynb",
+      "name": "NLP_Scratch.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -20,10 +20,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## 2017314461 Muhammad Shakeel Zuhaib\n",
-        "Homework 11 (AI Porject)\n",
-        "\n",
-        "NLP using character level LSTM + Packed Sequence"
+       
+        "NLP FROM SCRATCH: CLASSIFYING NAMES WITH A CHARACTER-LEVEL RNN"
       ]
     },
     {
