Update and rename Homework6_2017314461_Muhammad.ipynb to CIFAR_CNN.ipynb

--- a/Pytorch Practice/CIFAR_CNN.ipynb
+++ b/Pytorch Practice/CIFAR_CNN.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Homework6-2017314461-Muhammad.ipynb",
+      "name": "CIFAR_CNN.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -21,10 +21,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## 2017314461 Muhammad Shakeel Zuhaib\n",
-        "Homework 6 (AI Porject)\n",
-        "\n",
-        "CIFAR 10 with CNN"
+      
+        "##CIFAR 10 with CNN"
       ]
     },
     {
