--- a/Pytorch Practice/Homework8_2017314461_Muhammad.ipynb
+++ b/Pytorch Practice/Homework8_2017314461_Muhammad.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Homework8-2017314461-Muhammad.ipynb",
+      "name": "CIFAR_SeNet.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -270,10 +270,9 @@
         "colab_type": "text"
       },
       "source": [
-        "## 2017314461 Muhammad Shakeel Zuhaib\n",
-        "Homework 8 (AI Porject)\n",
+    
         "\n",
-        "CIFAR 10 with SEN-ResNet (Custom Resnet 26)"
+        "##CIFAR 10 with SEN-ResNet (Custom Resnet 26)"
       ]
     },
     {
