changes in name
changes

--- a/Pytorch Practice/CIFAR_RESNet.ipynb
+++ b/Pytorch Practice/CIFAR_RESNet.ipynb
@@ -7,10 +7,7 @@
     "id": "3c_EyBQAeVqG"
    },
    "source": [
-    "## 2017314461 Muhammad Shakeel Zuhaib\n",
-    "Homework 6 (AI Porject)\n",
-    "\n",
-    "CIFAR 10 with ResNet-18"
+    "##CIFAR 10 with ResNet-18"
    ]
   },
   {
